Auto focus when show mission new form.

--- a/app/views/mission_lists/_mission_new_form.html.erb
+++ b/app/views/mission_lists/_mission_new_form.html.erb
@@ -6,6 +6,7 @@
 	<label class="mission-input-line"></label>
 	<input type="text"
                class="edit-input mission-edit-input"
+               autofocus="true"
                placeholder="新的任务"
                data-action="keydown->mission#enterMissionNew">
 	<%= render "layouts/mission_distributor_button", mission: nil %>
