--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,13 +12,13 @@
   <div class="board-box"
        data-controller="member mission">
     <div class="flex-vcenter personal_page_header">
-      <%= image_tag current_user.avatar_url, width: 80, height: 80, class: "avatar" %>
+      <%= image_tag @user.avatar_url, width: 80, height: 80, class: "avatar" %>
       <div class="inline-block personal_page_info">
         <div class="personal_page_username">
-          <%= current_user.name %>
+          <%= @user.name %>
         </div>
         <div class="personal_page_email">
-          <%= current_user.email %>
+          <%= @user.email %>
         </div>
       </div>
     </div>
